<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/comfortaabold"
        android:text="@string/register_title"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gobackbutton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/register_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="316dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
       <EditText
           android:id="@+id/email_tv"
           android:layout_width="343dp"
           android:layout_height="52dp"
           android:inputType="textEmailAddress"
           android:background="@drawable/sharp_borders_black"
           android:hint="@string/register_email"
           android:paddingStart="17dp"
           android:textSize="15sp"
           android:fontFamily="@font/robotobold"
           android:layout_marginBottom="16dp"
           tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password_tv"
            android:layout_width="343dp"
            android:layout_height="52dp"
            android:inputType="textPassword"
            android:background="@drawable/sharp_borders_black"
            android:hint="@string/register_password"
            android:paddingStart="17dp"
            android:textSize="15sp"
            android:fontFamily="@font/robotobold"
            android:layout_marginBottom="16dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/register_button_next"
            android:layout_width="343dp"
            android:layout_height="52dp"
            android:background="@drawable/black_background_style"
            android:text="@string/next_button1"
            android:textColor="@color/white"
            android:fontFamily="@font/robotobold"
            />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/sign_up_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="316dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="343dp"
            android:layout_height="52dp"
            android:inputType="text"
            android:background="@drawable/sharp_borders_black"
            android:hint="@string/sing_up_username"
            android:paddingStart="17dp"
            android:textSize="15sp"
            android:fontFamily="@font/robotobold"
            android:layout_marginBottom="16dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="343dp"
            android:layout_height="52dp"
            android:background="@drawable/black_background_style"
            android:text="@string/sing_up_button"
            android:textColor="@color/white"
            android:fontFamily="@font/robotobold"
            />

        <TextView
            android:layout_width="343dp"
            android:layout_height="36dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/terms_of_service"
            android:textSize="13sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>