<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/photo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/comfortaabold"
        android:text="@string/photo"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        android:layout_marginStart="142dp"
        android:layout_marginTop="307dp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="312dp"
        android:src="@drawable/uniontop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/unionbotom"
        app:layout_constraintStart_toStartOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@+id/icon"/>

    <TextView
        android:id="@+id/name_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/pawel_czerwinski"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/author_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotobold"
        android:textColor="@color/black"
        android:text="@string/pawel_czerwinski_instagram"
        android:textSize="11sp"
        android:layout_marginStart="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_author" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="33dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/login_button"
            android:layout_width="167dp"
            android:layout_height="52dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/black_border_style"
            android:letterSpacing="0.04"
            android:lineHeight="15sp"
            android:text="@string/login"
            android:textSize="13sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="46dp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="167dp"
            android:layout_height="52dp"
            android:background="@drawable/black_background_style"
            android:letterSpacing="0.04"
            android:lineHeight="15sp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="13sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="46dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>